--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,3 +38,4 @@ jobs:
           app-name: 'image-gallery-backend' 
           slot-name: 'production'
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          scm-url: 'https://image-gallery-backend.scm.azurewebsites.net'
