--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'image-gallery-backend' 
+          app-name: 'image-gallery-backend'
           slot-name: 'production'
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          scm-url: 'https://image-gallery-backend.scm.azurewebsites.net'
+          package: './publish'  # Add this line
